# python-utility-sharepoint

./: README.md  discovery.yml  pyproject.toml
packtsharepoint/: packtsharepoint.py
